<resources>
    <string name="app_name">Burger Queen</string>
    <string name="burger_main">burger_main.png</string>
    <string name="meat">meat.png</string>
    <string name="salad">salad.png</string>
    <string name="cheese2">cheese2.png</string>
    <string name="subtitle">Choose Your Own Ingredient</string>
    <string name="protein">Protein</string>
    <string name="beef">Beef</string>
    <string name="chicken">Chicken</string>
    <string name="fish">Fish</string>
    <string name="egg">Egg</string>
    <string name="fiber">Fiber</string>
    <string name="lettuce">Lettuce</string>
    <string name="tomato">Tomato</string>
    <string name="pickle">Pickle</string>
    <string name="onion">Onion</string>
    <string name="junk">Unhealthy But Yummy Fat</string>
    <string name="cheese">Cheese</string>
    <string name="mayo">Mayonaise</string>
    <string name="mustard">Mustard</string>
    <string name="size">Size</string>
    <string name="price">RM0.00</string>
    <string name="order">ORDER</string>
    <string name="reset">RESET</string>

    <string-array name="sizes">
        <item>Small</item>
        <item>Regular</item>
        <item>Large</item>
        <item>Gigantic</item>
    </string-array>
    <string-array name="fiber">
        <item>lettuce</item>
        <item>tomato</item>
        <item>pickle</item>
        <item>onion</item>
    </string-array>

    <string-array name="junk">
        <item>cheese</item>
        <item>mayo</item>
        <item>mustard</item>
    </string-array>
</resources>
