<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg"
        android:paddingBottom="20dp">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="15dp" />

        <ImageView
            android:id="@+id/burger_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/burger_main"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/burger_main" />

        <TextView
            android:id="@+id/subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/subtitle"
            android:textColor="@color/mainFont"
            android:textSize="21sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/burger_main" />

        <ImageView
            android:id="@+id/meat"
            android:layout_width="51dp"
            android:layout_height="35dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/meat"
            app:layout_constraintLeft_toLeftOf="@id/guideline1"
            app:layout_constraintTop_toBottomOf="@id/subtitle"
            app:srcCompat="@drawable/meat" />

        <TextView
            android:id="@+id/protein"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="15dp"
            android:text="@string/protein"
            android:textColor="@color/mainFont"
            android:textSize="19sp"
            app:layout_constraintLeft_toRightOf="@id/meat"
            app:layout_constraintTop_toBottomOf="@id/subtitle" />

        <RadioGroup
            android:id="@+id/meat_rg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toEndOf="@id/guideline1"
            app:layout_constraintTop_toBottomOf="@id/meat">

            <RadioButton
                android:id="@+id/beef"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:text="@string/beef" />

            <RadioButton
                android:id="@+id/chicken"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:text="@string/chicken" />

            <RadioButton
                android:id="@+id/fish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:text="@string/fish" />

            <RadioButton
                android:id="@+id/egg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:text="@string/egg" />
        </RadioGroup>

        <ImageView
            android:id="@+id/fiber"
            android:layout_width="51dp"
            android:layout_height="35dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/meat"
            app:layout_constraintLeft_toLeftOf="@id/guideline1"
            app:layout_constraintTop_toBottomOf="@id/meat_rg"
            app:srcCompat="@drawable/salad" />

        <TextView
            android:id="@+id/salad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="15dp"
            android:text="@string/fiber"
            android:textColor="@color/mainFont"
            android:textSize="19sp"
            app:layout_constraintLeft_toRightOf="@id/fiber"
            app:layout_constraintTop_toBottomOf="@id/meat_rg" />
        <LinearLayout
            android:id="@+id/fiber_rg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            app:layout_constraintStart_toEndOf="@id/guideline1"
            app:layout_constraintTop_toBottomOf="@id/fiber">


            <CheckBox
            android:id="@+id/lettuce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lettuce" />
            <CheckBox
                android:id="@+id/tomato"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tomato" />
            <CheckBox
                android:id="@+id/pickle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pickle" />
            <CheckBox
                android:id="@+id/onion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/onion" />
        </LinearLayout>


        <ImageView
            android:id="@+id/cheese2"
            android:layout_width="51dp"
            android:layout_height="35dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/cheese2"
            app:layout_constraintLeft_toLeftOf="@id/guideline1"
            app:layout_constraintTop_toBottomOf="@id/fiber_rg"
            app:srcCompat="@drawable/cheese2" />

        <TextView
            android:id="@+id/junk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="15dp"
            android:text="@string/junk"
            android:textColor="@color/mainFont"
            android:textSize="19sp"
            app:layout_constraintLeft_toRightOf="@id/cheese2"
            app:layout_constraintTop_toBottomOf="@id/fiber_rg" />

        <LinearLayout
            android:id="@+id/junk_rg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toEndOf="@id/guideline1"
            app:layout_constraintTop_toBottomOf="@id/junk">


            <CheckBox
                android:id="@+id/cheese"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cheese"
                android:layout_marginEnd="50dp"/>
            <CheckBox
                android:id="@+id/mayo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mayo"
                android:layout_marginEnd="50dp"/>
            <CheckBox
                android:id="@+id/mustard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mustard" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/hr"
            android:layout_width="400dp"
            android:layout_height="2dp"
            android:layout_marginTop="10dp"
            android:background="@color/hr"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/junk_rg" />

        <TextView
            android:id="@+id/size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/size"
            android:textColor="@color/mainFont"
            android:textSize="19sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/guideline1"
            app:layout_constraintTop_toBottomOf="@id/hr" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:spinnerMode="dropdown"
            app:layout_constraintStart_toEndOf="@id/size"
            app:layout_constraintTop_toBottomOf="@id/hr" />

        <LinearLayout
            android:id="@+id/totalBG"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:background="@color/totalBG"
            android:orientation="horizontal"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/hr">

            <TextView
                android:id="@+id/total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:paddingEnd="30dp"
                android:textStyle="bold"
                android:text="@string/price"
                android:textColor="@color/price" />
        </LinearLayout>


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="604dp" />

        <Button
            android:id="@+id/order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order"
            android:background="@color/totalBG"
            android:textColor="@color/price"
            app:layout_constraintEnd_toStartOf="@+id/reset"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="600dp"
            app:layout_constraintTop_toBottomOf="@id/guideline2"/>

        <Button
            android:id="@+id/reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            android:background="@color/totalBG"
            android:textColor="@color/price"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/order"
            tools:layout_editor_absoluteY="600dp"
            app:layout_constraintTop_toBottomOf="@id/guideline2"/>

        <LinearLayout
            android:layout_width="270dp"
            android:layout_height="1dp"
            android:background="@color/hr"
            app:layout_constraintStart_toEndOf="@id/protein"
            app:layout_constraintTop_toBottomOf="@id/subtitle"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="5dp"/>

        <LinearLayout
            android:layout_width="290dp"
            android:layout_height="1dp"
            android:background="@color/hr"
            app:layout_constraintStart_toEndOf="@id/fiber"
            app:layout_constraintTop_toBottomOf="@id/meat_rg"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="50dp"/>

        <LinearLayout
            android:layout_width="110dp"
            android:layout_height="1dp"
            android:background="@color/hr"
            app:layout_constraintStart_toEndOf="@id/junk"
            app:layout_constraintTop_toBottomOf="@id/fiber_rg"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="5dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>